fix: bio centered on smaller viewports Close #28

--- a/src/main.scss
+++ b/src/main.scss
@@ -135,6 +135,7 @@ body {
       .text-wrapper{
          padding: 0 10%;
          max-width: 630px;
+         margin: auto;
       }
    }
 
